<resources>
    <string name="app_name">School Management</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait. . .</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="first_time_register_here">First time? Register here</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="year">Year</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="session_expired">Session Expired</string>
    <string name="please_login_again">Please login again</string>
    <string name="okay">okay</string>
</resources>
