<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".views.activities.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_padding_size_xlarge" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_padding_size_xlarge" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/text_xxlarge_color_primary_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEditTxt"
            style="@style/edit_text_cplight_bg_padding_medium"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_large"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/usernameEditTxt"
            style="@style/edit_text_cplight_bg_padding_medium"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/yearEditTxt"
            style="@style/edit_text_cplight_bg_padding_medium"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:hint="@string/year" />

        <EditText
            android:id="@+id/passwordEditTxt"
            style="@style/edit_text_cplight_bg_padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/confirmPasswordEditTxt"
            style="@style/edit_text_cplight_bg_padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            style="@style/button_text_micro_color_accent"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:text="@string/sign_up" />
        <TextView
            android:id="@+id/loginTxtView"
            style="@style/text_small_color_accent_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:text="@string/already_registered_login_here"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>