<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="@dimen/margin_padding_size_medium"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/text_large_color_text_primary_semi_bold"
            android:textColor="@color/textPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textAllCaps="true"
            android:text="@string/session_expired"
            />
        <TextView
            style="@style/text_small_color_text_secondary_light"
            android:textColor="@color/textPrimary"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:layout_height="wrap_content"
            android:text="@string/please_login_again"
            android:ellipsize="end"

            />
        <TextView

            android:id="@+id/okaySession"
            style="@style/text_small_color_accent_medium"
            android:layout_width="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="@dimen/margin_padding_size_small"
            android:text="@string/okay"
            android:textAllCaps="true"
            />
    </LinearLayout>

</LinearLayout>